# pinkbin

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_EN.md  deny.toml  lefthook.yml  package.json  pnpm-lock.yaml
.claude/: settings.json
.claude/commands/: add-scaffold.md  scaffold-review.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  advisorClient.ts  api.ts  chatUtils.ts  env.ts  format.ts  main.tsx  messages.ts  mocks.ts  persist.ts  privacy.ts  prompts.ts  store.ts  styles.css  tree.ts  triage.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/__tests__/: format.test.ts  mocks.advise.test.ts  store.test.ts
apps/desktop/src/components/: AdvisorCard.tsx  ChatPanel.css  ChatPanel.tsx  CleanupModal.tsx  ContextMenu.tsx  DiagnosticsBar.tsx  ErrorBoundary.tsx  Logo.tsx  ProgressButton.tsx  ScaffoldPanel.tsx  Settings.tsx  Splitter.tsx  SteamInspector.css  SteamInspector.tsx  SteamInspectorModal.tsx  SteamWorkshopModal.tsx  Studio.css  Studio.tsx  Toast.tsx  TreeView.tsx  TriageView.tsx
apps/desktop/src/components/CleanupModal/: CondaPicker.tsx  DryRunPreviewDialog.tsx  ScopeGroup.tsx  WxidFilter.tsx  hooks.ts  index.tsx  types.ts
apps/desktop/src/hooks/: useChat.ts  useImageDrop.ts  useOverview.ts  useScan.ts
apps/desktop/src/store/: chatSlice.ts  index.ts  scanSlice.ts  uiSlice.ts
crates/advisor/: Cargo.toml
crates/advisor/src/: client.rs  lib.rs
crates/advisor/src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/scaffold/: Cargo.toml
crates/scaffold-lint/: Cargo.toml
crates/scaffold-lint/src/: lib.rs  main.rs
crates/scaffold/src/: lib.rs
crates/scaffold/tests/: conda_safety.rs  test_utils.rs  wechat_pc_safety.rs
crates/scaffold/tests/_templates/: scaffold_safety.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs  mft.rs
crates/steam-inspector/: Cargo.toml
crates/steam-inspector/src/: lib.rs
crates/steam-inspector/tests/: inspect_real_dir.rs  parse_real_fixtures.rs
crates/steam-inspector/tests/fixtures/: appmanifest_730.acf  libraryfolders.vdf
crates/walker/: Cargo.toml
crates/walker/src/: lib.rs
docs/: ARCHITECTURE.md  HOWTO.md  PRIOR-ART.md  REQUIREMENTS.md  SCAFFOLD-AUTHORING.md  cross-device-test-checklist.md  plan.md  steam-inspector.md  wechat_scaffolds_and_harness.md  wechat_todos.md  why-pinkbin.md
docs/archive/: diskwise-handoff-2026-04-30.json
docs/research/: python-dev-cleanup-landscape.md
docs/scaffold-requirements/: STATUS.md  _TEMPLATE.md  dev-tools.md  messaging.md
docs/superpowers/plans/: 2026-06-15-pinkbin-frontend-rebeautify.md
docs/superpowers/specs/: 2026-06-15-pinkbin-frontend-rebeautify-design.md
scaffolds/: conda.toml  wechat-pc.toml
scaffolds/_templates/: scaffold.toml
scripts/: make-icon.ps1
