[workspace]
resolver = "2"
members = [
  "crates/scanner",
  "crates/scaffold",
  "crates/executor",
  "crates/advisor",
  "crates/scaffold-lint",
  "crates/steam-inspector",
  "apps/desktop/src-tauri",
]

[workspace.package]
edition    = "2021"
license    = "MIT"
repository = "https://github.com/cccyd2003-qwq/pinkbin"
version    = "0.1.2"

[workspace.dependencies]
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "1.1"
anyhow             = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir            = "2.5"
jwalk              = "0.8"
rayon              = "1.10"
ntfs               = "0.4"
windows-sys        = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Registry"] }
globset            = "0.4"
trash              = "5"
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio              = { version = "1", features = ["full"] }
once_cell          = "1"
chrono             = { version = "0.4", features = ["serde"] }
sha2               = "0.11"
dirs               = "5"
shellexpand        = "3"
tempfile           = "3"
include_dir        = "0.7"

[profile.release]
opt-level = 3
lto       = "thin"
strip     = true
