[package]
name        = "pinkbin-advisor"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
thiserror.workspace  = true
reqwest.workspace    = true
tokio.workspace      = true
tracing.workspace    = true
