[package]
name        = "pinkbin-executor"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
thiserror.workspace  = true
trash.workspace      = true
chrono.workspace     = true
tracing.workspace    = true
tempfile.workspace   = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
