[package]
name        = "pinkbin-scaffold"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
serde.workspace        = true
toml.workspace         = true
anyhow.workspace       = true
thiserror.workspace    = true
globset.workspace      = true
shellexpand.workspace  = true
tracing.workspace      = true
