[package]
name        = "pinkbin-scanner"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
serde.workspace     = true
walkdir.workspace   = true
jwalk.workspace     = true
rayon.workspace     = true
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true

[target.'cfg(windows)'.dependencies]
ntfs.workspace        = true
windows-sys.workspace = true
