[package]
name        = "pinkbin-scanner"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
serde.workspace     = true
walkdir.workspace   = true
jwalk.workspace     = true
anyhow.workspace    = true
tracing.workspace   = true
pinkbin-walker      = { path = "../walker" }

[target.'cfg(windows)'.dependencies]
ntfs.workspace = true
