[package]
name        = "diskwise-desktop"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[lib]
name       = "diskwise_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "diskwise"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                = { version = "2", features = [] }
tauri-plugin-dialog  = "2"
tauri-plugin-fs      = "2"
tauri-plugin-shell   = "2"

serde.workspace              = true
serde_json.workspace         = true
tokio.workspace              = true
anyhow.workspace             = true
chrono.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
jwalk.workspace              = true

diskwise-scanner  = { path = "../../../crates/scanner" }
diskwise-scaffold = { path = "../../../crates/scaffold" }
diskwise-executor = { path = "../../../crates/executor" }
diskwise-advisor  = { path = "../../../crates/advisor" }
